tests/fixtures/invalid/pow_bool_int_bytes.py
# Cannot call pow() with Bool, Int, Bytes
x = pow(True, 1, b"hello")
